# Cognitive-Shield-Project

./: CONTRIBUTING.md  CORE_PRINCIPLES.md  ETHICAL_GUIDELINES.md  MANIFESTO 1.md  MANIFESTO.md  README.md  SSA_ETHICAL_PROTOCОL.md  THREAT_PATTERN_LIBRARY.md  WHITE_PAPER.md  index.html  schema.json
docs/: REPOSITORY_MAP.md  STRATEGIC_CONTEXT.md  pyproject.toml
docs/archive/: README.md
docs/contracts/: SHARED_CONTRACT_SCHEMA_PACK.md
docs/functional-local-prototype-engine/: FINAL_ENGINE_PROOF_GATE.md  POST_FLPE_CLOSURE_SNAPSHOT.md
docs/project-state/: CURRENT_PROJECT_STATE.md  WORKING_PROTOCOL.md
docs/repo-governance/: ACTIVE_BRANCH_POLICY.md  CLEANUP_INVENTORY_SPRINT_1.md  CODING_RULES.md  NAMING_RULES.md  POST_MVP_ARCHIVE_MOVEMENT_BOUNDARY_REVIEW.md  POST_MVP_ARCHIVE_STRUCTURE_BOUNDARY_REVIEW.md  POST_MVP_ARCHIVE_STRUCTURE_PASS_CLOSURE_NOTE.md  POST_MVP_CLEANUP_WORKFLOW_COVERAGE_PASS_CLOSURE_NOTE.md  POST_MVP_CLEANUP_WORKFLOW_COVERAGE_REVIEW.md  POST_MVP_DOCS_CLASSIFICATION.md  POST_MVP_FIRST_ARCHIVE_MOVEMENT_CANDIDATE_LIST.md  POST_MVP_FIRST_ARCHIVE_MOVEMENT_CANDIDATE_LIST_REVIEW.md  POST_MVP_REPO_CLEANUP_CONTROL_PASS.md  POST_MVP_REPO_CLEANUP_INVENTORY.md  POST_MVP_ROOT_FILES_CLASSIFICATION.md  POST_MVP_SOURCE_TESTS_CLASSIFICATION.md  POST_MVP_SPRINT_DOCS_CLASSIFICATION.md  README.md
docs/sprint-0/: B1_LEVEL_B_PRACTICAL_CLOSURE_NOTE.md  B2_MINIMAL_TESTS_OPENING_CLOSURE_NOTE.md  B3_SCRIPTS_EXAMPLES_OPENING_CLOSURE_NOTE.md  REPOSITORY_MAP.md  SPRINT_0_DESIGN_PACK.md  SPRINT_0_STATUS.md
docs/sprint_0/: B4_FINAL_REPO_REVIEW_AGAINST_CHECKLIST.md  (+3 more)
(+434 files in other folders)
