[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-shield"
version = "0.1.0"
description = "Cognitive Shield - bounded MVP repository skeleton"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Vasko Vasilev" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
